--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ clap = { version = "4.5.32", features = ["derive"] }
 colored = "3.0.0"
 diff-match-patch-rs = "0.4.1"
 serde = { version = "1.0.219", features = ["derive"] }
-toml = "0.8.20"
+serde_yaml = "0.9.34"
