--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anstyle = "1.0.10"
 anyhow = "1.0.97"
 clap = { version = "4.5.35", features = ["derive"] }
-colored = "3.0.0"
 diff-match-patch-rs = "0.4.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
